<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	android:scrollbarStyle="outsideOverlay">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_margin="16dp"
		android:layout_height="match_parent"
		android:orientation="vertical">

		<RelativeLayout
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:gravity="center_vertical"
			android:paddingBottom="10dp"
			android:paddingLeft="20dp"
			android:paddingRight="20dp">

			<TextView
				android:id="@+id/timeTextView"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_centerVertical="true"
				android:background="@drawable/text_view_background"
				android:clickable="true"
				android:padding="5dp"
				android:textSize="30sp"
				tools:text="12:00"/>

			<Switch
				android:id="@+id/enableSwitch"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_alignParentRight="true"
				android:layout_centerVertical="true"/>

		</RelativeLayout>

		<LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_marginLeft="50dp"
			android:layout_marginRight="50dp"
			android:layout_marginTop="10dp"
			android:gravity="center_horizontal"
			android:orientation="horizontal"
			android:weightSum="4">

			<LinearLayout
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:gravity="center_horizontal">

				<ToggleButton
					android:id="@+id/mondayToggleButton"
					style="@style/Widget.WakeYouInMusic.Button.Toggle.Day"
					android:layout_width="50dp"
					android:layout_height="50dp"
					tools:textOff="MON"
					tools:textOn="MON"/>

			</LinearLayout>

			<LinearLayout
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:gravity="center_horizontal">

				<ToggleButton
					android:id="@+id/tuesdayToggleButton"
					style="@style/Widget.WakeYouInMusic.Button.Toggle.Day"
					android:layout_width="50dp"
					android:layout_height="50dp"
					tools:textOff="TUE"
					tools:textOn="TUE"/>

			</LinearLayout>

			<LinearLayout
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:gravity="center_horizontal">

				<ToggleButton
					android:id="@+id/wednesdayToggleButton"
					style="@style/Widget.WakeYouInMusic.Button.Toggle.Day"
					android:layout_width="50dp"
					android:layout_height="50dp"
					tools:textOff="WED"
					tools:textOn="WED"/>

			</LinearLayout>

			<LinearLayout
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:gravity="center_horizontal">

				<ToggleButton
					android:id="@+id/thursdayToggleButton"
					style="@style/Widget.WakeYouInMusic.Button.Toggle.Day"
					android:layout_width="50dp"
					android:layout_height="50dp"
					tools:textOff="THU"
					tools:textOn="THU"/>

			</LinearLayout>

		</LinearLayout>

		<LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_marginLeft="50dp"
			android:layout_marginRight="50dp"
			android:layout_marginTop="10dp"
			android:gravity="center_horizontal"
			android:orientation="horizontal"
			android:weightSum="4">

			<LinearLayout
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:gravity="center_horizontal">

				<ToggleButton
					android:id="@+id/fridayToggleButton"
					style="@style/Widget.WakeYouInMusic.Button.Toggle.Day"
					android:layout_width="50dp"
					android:layout_height="50dp"
					tools:textOff="FRI"
					tools:textOn="FRI"/>

			</LinearLayout>

			<LinearLayout
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:gravity="center_horizontal">

				<ToggleButton
					android:id="@+id/saturdayToggleButton"
					style="@style/Widget.WakeYouInMusic.Button.Toggle.Day"
					android:layout_width="50dp"
					android:layout_height="50dp"
					tools:textOff="SAT"
					tools:textOn="SAT"/>

			</LinearLayout>

			<LinearLayout
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:gravity="center_horizontal">

				<ToggleButton
					android:id="@+id/sundayToggleButton"
					style="@style/Widget.WakeYouInMusic.Button.Toggle.Day"
					android:layout_width="50dp"
					android:layout_height="50dp"
					tools:textOff="SUN"
					tools:textOn="SUN"/>

			</LinearLayout>

		</LinearLayout>

		<View
			android:layout_width="fill_parent"
			android:layout_height="1dp"
			android:layout_marginBottom="5dp"
			android:layout_marginLeft="10dp"
			android:layout_marginRight="10dp"
			android:layout_marginTop="10dp"
			android:background="@android:color/white"
			android:visibility="gone"/>

		<EditText
			android:id="@+id/labelEditText"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="15dp"
			android:hint="@string/alarm_detail_hint_label"
			android:inputType="textCapSentences"
			android:singleLine="true"
			android:textSize="24sp"
			tools:text="Wake up for play"/>

		<LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="10dp"
			android:orientation="horizontal">

			<LinearLayout
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:orientation="vertical">

				<TextView
					android:id="@+id/ringtoneTextView"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:background="@drawable/text_view_background"
					android:drawableLeft="@drawable/button_ringtone"
					android:ellipsize="end"
					android:gravity="center_vertical"
					android:lines="1"
					android:padding="5dp"
					android:textSize="15sp"
					tools:text="Ringtone name"/>

				<CheckBox
					android:id="@+id/shuffleCheckBox"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginLeft="5dp"
					android:text="@string/alarm_detail_shuffle"/>

			</LinearLayout>

			<CheckBox
				android:id="@+id/vibrateCheckBox"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_alignParentRight="true"
				android:layout_centerVertical="true"
				android:text="@string/alarm_detail_vibrate"/>

		</LinearLayout>

	</LinearLayout>

</ScrollView>